--- a/index.html
+++ b/index.html
@@ -5,11 +5,55 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
+    <title>Safedriving - Sport Team</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="libs/font-awesome-4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="css/fonts.css" />
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
 <div class="root">
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/PyhHKAyyMx8" frameborder="0" allowfullscreen></iframe>
-  </div>
+    <header>
+        <h2>Блог Safedriving Team</h2>
+    </header>
+    <section class="content">
+        <div class="event">
+            <div class="event-title">Мальчик + девочка = 61 отжиманий! А вам слабо?</div>
+            <div class="event-date"><strong>31 марта 2017</strong></div>
+            <p>"Что за жизнь без причуд?" - спросили мы себя и решили устроить соревнование дружбы по отжиманиям! Каждый участник (а их всего было двое) боролся с самим собой и стремился отжаться заранее намеченное, но случайно появившееся, число - 34 раза <strong>за один подход</strong>.</p>
+            <p>Идея устроить соревнование родилась несколько недель назад, и все это время возможно кто-то долго и упорно тренировался, занимаясь с тренером, а возможно и нет... Этого мы никогда не узнаем.</p>
+            <p>Дата заранее не оговаривалось, но сегодня наступил удачный момент, который мы решили не упускать.</p>
+            <p>Итого дано: два участника (мальчик и девочка), несколько десятков тысяч зрителей... у телеэкранов и 3 зрителя на арене, у которых есть привилегированное право делать ставки на общее количество отжиманий...</p>
+            <p>На старт! Внимание! Выстрел! Участники бодро начали сгибать и разгибать локтевые суставы. 10. 20. 30... Через одну минуту участники обезсиленые упали на пол, но результат нельзя назвать неудачным.
+            В сумме оба участника отжались 61 раз! Ура! Позравляем! Выйграла ближайшая ставка в 50 отжиманий - поздравляем коллегу-победителя рукопожатием!
+            </p>
+            <p>Всем удачи и хорошего рабочего дня!</p>
+            <iframe width="600" height="420" src="https://www.youtube.com/embed/PyhHKAyyMx8" frameborder="0" allowfullscreen></iframe>
+            <p>А вам слабо убедить двух коллег (мальчика и девочку) отжаться одновременно за один подход 61 раз!? Если нет - снимайте, публикуйте и делитесь видео!</p>
+        </div>
+        <div class="event">
+            <div class="event-title">Апрельский марафон отжиманий объявляется открытым</div>
+            <div class="event-date"><strong>3 апреля 2017</strong></div>
+            <p>Команда Safedriving в лице 5 человек (3 парня и 2 девушки) решила принять вызов, брошенный самой же себе в последний день марта, и приняла решение
+                ознаменовать апрель месяцем спорта!
+                Что это означает? Каждый рабочий день апреля все участники команды должны будут отжаться не менее 15 раз!
+            </p>
+            <p>
+                Через месяц будем подводить итоги. Поехали!!!
+            </p>
+        </div>
+    </section>
+    <footer>
+
+    </footer>
+</div>
+
+<!--[if lt IE 9]>
+<script src="libs/html5shiv/es5-shim.min.js"></script>
+<script src="libs/html5shiv/html5shiv.min.js"></script>
+<script src="libs/html5shiv/html5shiv-printshiv.min.js"></script>
+<![endif]-->
+<script src="libs/jquery/jquery-1.11.1.min.js"></script>
+<script src="js/common.js"></script>
 </body>
 </html>
